// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render row with one col 1`] = `
<div
  class="vxteaser-row"
>
  <div
    class="vxteaser-col"
    data-testid="column"
    style="width: 100%;"
  >
    Col1
  </div>
</div>
`;

exports[`render row with two cols 1`] = `
<div
  class="vxteaser-row"
>
  <div
    class="vxteaser-col"
    data-testid="column"
    style="width: 50%;"
  >
    Col1
  </div>
  <div
    class="vxteaser-col"
    data-testid="column"
    style="width: 50%;"
  >
    Col2
  </div>
</div>
`;
